modified:   _config.yml 	modified:   _layouts/default.html 	modified:   index.md

--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 show_downloads: false
 
 theme: jekyll-theme-minimal
-title: [Willkommen!]
-description: [Wir suchen eine Wohnung]
+title: [Welcome!]
+description: [The search has begun. <a href="https://drheindel.github.io">(deutsche Seite)</a>]
 logo: /pic.jpeg
