modified:   _config.yml 	modified:   index.md

--- a/_config.yml
+++ b/_config.yml
@@ -2,5 +2,5 @@ show_downloads: false
 
 theme: jekyll-theme-minimal
 title: [Welcome!]
-description: [The search has begun. <a href="https://drheindel.github.io">(deutsche Seite)</a>]
+description: [The search has begun.]
 logo: /pic.jpeg
